# ansible_litellm

./: .gitignore  LICENSE  README.md  galaxy.yml  pyproject.toml
.github/workflows/: main.yml
examples/: complete_setup.yml  delete_resources.yml  model_endpoint_setup.yml  multi_environment.yml  update_resources.yml
plugins/modules/: litellm_endpoint.py  litellm_model.py  litellm_team.py  litellm_virtual_key.py
